# xl2y

./: CLAUDE.md  README.md  pyproject.toml
docs/plans/: 2026-07-22-xl2y-design.md  2026-07-22-xl2y-implementation.md
reference/: excel_loader.py
tests/: fixtures.py  test_coerce.py  test_extract.py  test_fixtures.py  test_load.py  test_package.py  test_parquet.py  test_patterns.py  test_reader.py  test_schema.py  test_sink.py  test_table.py
xl2y/: __init__.py  coerce.py  errors.py  extract.py  patterns.py  reader.py  schema.py  sink.py  table.py  util.py
