[project]
name = "xl2y"
version = "0.1.0"
description = "Excel in, cleaning pipeline, Parquet out"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "polars>=1.17",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xl2y"]
